// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label respects the "outline" prop 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  border-radius: 2px;
  font-size: 12px;
  padding-left: 3px;
  padding-right: 3px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #6a737d;
  margin-top: -1px;
  margin-bottom: -1px;
  font-weight: 400;
  color: #586069;
  background-color: transparent;
  border: 1px solid rgba(27,31,35,0.15);
  box-shadow: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;

exports[`Label respects the "variant" prop 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  border-radius: 2px;
  font-size: 16px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #6a737d;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;
